[gd_scene load_steps=3 format=3 uid="uid://b6jtdck1r87pj"]

[ext_resource type="Theme" uid="uid://c0mo5w6awjj34" path="res://ui/themes/menu-button.theme" id="1_2m7rq"]
[ext_resource type="Script" path="res://menus/pause/pause_menu.gd" id="1_3njbn"]

[node name="Menu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 1
script = ExtResource("1_3njbn")

[node name="Panel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -252.0
offset_top = -180.0
offset_right = 252.0
offset_bottom = 180.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 1

[node name="VBoxContainer2" type="VBoxContainer" parent="Panel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -104.0
offset_top = -59.0
offset_right = 104.0
offset_bottom = 59.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_2m7rq")

[node name="Continue" type="Button" parent="Panel/VBoxContainer2"]
layout_mode = 2
text = "Continue"

[node name="MainMenu" type="Button" parent="Panel/VBoxContainer2"]
layout_mode = 2
text = "Main Menu
"

[connection signal="mouse_entered" from="Panel/VBoxContainer2/Continue" to="." method="_on_continue_mouse_entered"]
[connection signal="pressed" from="Panel/VBoxContainer2/Continue" to="." method="_on_continue_pressed"]
[connection signal="mouse_entered" from="Panel/VBoxContainer2/MainMenu" to="." method="_on_main_menu_mouse_entered"]
[connection signal="pressed" from="Panel/VBoxContainer2/MainMenu" to="." method="_on_main_menu_pressed"]
